config: enhance IDE setup with comprehensive extension suite
Significantly expanded VSCode extension library to include Ruby LSP/Sorbet, Java development pack, Python tooling (mypy, ruff, jupyter), frontend frameworks (Astro, Vue, Tailwind), and infrastructure tools (Terraform, Docker, Kubernetes). Reorganized settings.json with categorized sections for improved navigation. Added shellcheck to mise runtime configuration.

--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -7,6 +7,7 @@ rust = "1.91"
 ruby = "3.2.9"
 flutter = "3.38"
 go = "1.25"
+shellcheck = "0.11"
 
 [settings]
 idiomatic_version_file_enable_tools = ["ruby", "python", "go", "node"]
