refactor: migrate sheldon plugins from 'use' to 'dir' syntax
Update sheldon plugin configuration to use 'dir' instead of 'use' for ohmyzsh and prezto plugins. Move sheldon initialization after zstyle configuration to ensure proper completion setup.

--- a/config/sheldon/plugins.toml
+++ b/config/sheldon/plugins.toml
@@ -20,19 +20,19 @@ github = "zsh-users/zsh-history-substring-search"
 
 [plugins.extract]
 github = "ohmyzsh/ohmyzsh"
-use = ["plugins/extract"]
+dir = "plugins/extract"
 
 [plugins.prezto-terminal]
 github = "sorin-ionescu/prezto"
-use = ["modules/terminal"]
+dir = "modules/terminal"
 
 [plugins.prezto-editor]
 github = "sorin-ionescu/prezto"
-use = ["modules/editor"]
+dir = "modules/editor"
 
 [plugins.prezto-directory]
 github = "sorin-ionescu/prezto"
-use = ["modules/directory"]
+dir = "modules/directory"
 
 [plugins.zsh-background-notify]
 github = "t413/zsh-background-notify"
